Fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #f2f3f5;
+    background: #43516B;
     border-right: 1px solid #e6e9ec;
     left: -300px;
   }
@@ -170,13 +170,13 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: flex;
   align-items: center;
-  color: #45505b;
+  color: #000000;
   padding: 10px 18px;
   margin-bottom: 8px;
   transition: 0.3s;
   font-size: 15px;
   border-radius: 50px;
-  background: #f2f3f5;
+  background: #3e5681;
   height: 56px;
   width: 100%;
   overflow: hidden;
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
   color: #fff;
-  background: #0563bb;
+  background: #66A3DB;
 }
 
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu li:hover > a span {
